tests/cases/meta/ok/meta-function-ast-input-substitution.ari
meta fn add_one(input: ast) -> ast {
  return input + 1;
}

fn main() -> i64 {
  return add_one!(40 + 1);
}
