tests/cases/meta/errors/macro-call-type-domain.ari
meta fn choose(input: type) -> type {
}

fn main() -> i64 {
  return choose!(i64);
}
